fix(cover): add line break in title

--- a/src/components/Cover/Cover.module.scss
+++ b/src/components/Cover/Cover.module.scss
@@ -16,6 +16,9 @@
       font-size: 2.625rem;
       font-weight: 700;
       line-height: 3rem;
+      width: 60%;
+
+      align-self: flex-start;
     }
   }
 }
